chore: Bump dependencies